syntax = "proto3";
package tarareba_competition_history;

option go_package = "../tarareba_competition_history_pb";

service TararebaService {
  // コンテスト参加履歴を返す
  rpc GetCompetitionHistory(GetCompetitionHistoryRequest) returns (GetCompetitionHistoryResponse) {
  }
}

message CompetitionHistory {

  // Required. レート変動対象の範囲
  // 以下のフォーマットとする。
  // 1. unrated のコンテスト: "-"
  // 2. rated のコンテスト: " ~ 1999", "2000 ~ "（参考：https://kenkoooo.com/atcoder/resources/contests.json）
  string rate_change = 1;
  // Required. 順位
  int32 place = 2;
  // Required. 参加前のレート
  int32 old_rating = 3;
  // Required. 参加後のレート
  int32 new_rating = 4;
  // Required. パフォーマンス
  int32 performance = 5;
  // Required. 内部パフォーマンス
  int32 inner_performance = 6;
  // Required. コンテストのスクリーンネーム（おそらく、フロント側でリンクをはるのに使う）
  string contest_screen_name = 7;
  // Required. コンテスト名
  string contest_name = 8;
  // Required. コンテスト名（英語）
  string contest_name_en = 9;
  // Required. コンテストの終了時刻
  string end_time = 10;
}

message GetCompetitionHistoryRequest {

  // Required. AtCoder のユーザー ID。（例：monkukui）
  string user_id = 1;
}

message GetCompetitionHistoryResponse {

  // Required. 出場したコンテストのリスト
  repeated CompetitionHistory competition_history = 1;
}
